[workspace]
members = ["dnas/*/zomes/coordinator/*", "dnas/*/zomes/integrity/*", "crates/*"]
resolver = "2"

[workspace.dependencies]
hdi = "=0.4.2"
hdk = "=0.3.2"
# holochain_integrity_types = "=0.2.2"
serde = "1.0"
paste = "1.0"
rand = "0.8.5"
hc_prefix_index = "0.12.0"
regex = "1.10.3"
trust_atom_types = { git = "https://github.com/trustgraph/trustgraph-holochain.git", package = "trust_atom_types", branch = "chore/hdk-0.3.2-using-builder" }

[workspace.dependencies.agent_pins]
path = "dnas/mewsfeed/zomes/coordinator/agent_pins"

[workspace.dependencies.agent_pins_integrity]
path = "dnas/mewsfeed/zomes/integrity/agent_pins"

[workspace.dependencies.follows]
path = "dnas/mewsfeed/zomes/coordinator/follows"

[workspace.dependencies.follows_integrity]
path = "dnas/mewsfeed/zomes/integrity/follows"

[workspace.dependencies.follows_types]
path = "crates/follows_types"

[workspace.dependencies.likes]
path = "dnas/mewsfeed/zomes/coordinator/likes"

[workspace.dependencies.likes_integrity]
path = "dnas/mewsfeed/zomes/integrity/likes"

[workspace.dependencies.mews]
path = "dnas/mewsfeed/zomes/coordinator/mews"

[workspace.dependencies.mews_integrity]
path = "dnas/mewsfeed/zomes/integrity/mews"

[workspace.dependencies.mews_types]
path = "crates/mews_types"

[workspace.dependencies.ping]
path = "dnas/mewsfeed/zomes/coordinator/ping"

[workspace.dependencies.profiles]
path = "dnas/mewsfeed/zomes/coordinator/profiles"

[workspace.dependencies.profiles_integrity]
path = "dnas/mewsfeed/zomes/integrity/profiles"

[workspace.dependencies.hc_call_utils]
path = "crates/hc_call_utils"

[workspace.dependencies.hc_link_pagination]
path = "crates/hc_link_pagination"

[workspace.dependencies.trust_atom]
path = "dnas/mewsfeed/zomes/coordinator/trust_atom"

[workspace.dependencies.trust_atom_integrity]
path = "dnas/mewsfeed/zomes/integrity/trust_atom_integrity"