[package]
edition = "2021"
name = "mews"
version = "0.0.1"

[lib]
crate-type = ["cdylib", "rlib"]
name = "mews"

[dependencies]
derive_more = "0"
regex = "1"
serde = "1"

mews_integrity = {path = "../../integrity_zomes/mews"}
hdk = {version = "0.1", features = ["encoding"]}

[dev-dependencies]
holochain = { version = "=0.1.3", default-features = false, features = [
  "test_utils",
] }
tokio = { version = "1.3", features = ["full"] }
futures = { version = "0.3.1", default-features = false }
