[package]
edition = "2021"
name = "profiles"
version = "0.1.0"

[lib]
crate-type = ["cdylib", "rlib"]
name = "profiles"

[dependencies]
hc_zome_profiles_coordinator = {git = "https://github.com/jost-s/profiles.git", rev = "ee5c82c2a5467ff41f02ed54dfbb66313daed545", package = "hc_zome_profiles_coordinator"}
