[package]
edition = "2021"
name = "profiles_integrity"
version = "0.1.0"

[lib]
crate-type = ["cdylib", "rlib"]
name = "profiles_integrity"

[dependencies]
hc_zome_profiles_integrity = {git = "https://github.com/holochain-open-dev/profiles", rev = "for-hdk-v0.0.151", package = "hc_zome_profiles_integrity"}
