[package]
edition = "2021"
name = "profiles_integrity"
version = "0.1.0"

[lib]
crate-type = ["cdylib", "rlib"]
name = "profiles_integrity"

[dependencies]
hc_zome_profiles_integrity = {git = "https://github.com/jost-s/profiles", rev = "for-hdk-v0.1.0-beta-rc.1", package = "hc_zome_profiles_integrity"}
