[package]
edition = "2018"
name = "profiles"
version = "0.0.1"

[lib]
crate-type = ["cdylib", "rlib"]
name = "profiles"

[dependencies]
serde = "1"
derive_more = "0"
hc_zome_profiles = {git = "https://github.com/holochain-open-dev/profiles", rev = "c117d3e675ab25b3f81010c41c10e041b3559f5e", package = "hc_zome_profiles"}

hdk = {version = "0.0.123", features = ["encoding"]}
