[package]
edition = "2021"
name = "mews"
version = "0.0.1"

[lib]
crate-type = ["cdylib", "rlib"]
name = "mews"

[dependencies]
derive_more = "0"
regex = "1"
serde = "1"
thiserror = "1"

mews_integrity = {path = "../../integrity_zomes/mews"}
trust_atom_types = {git = "https://github.com/trustgraph/trustgraph-holochain.git", package = "trust_atom_types"}
# trust_atom_types = { path= "/Users/knight/code/trustgraph/trustgraph-holochain/zomes/trust_atom_types"}
hdk = {version = "0.1", features = ["encoding"]}
itertools = "0.10"

[dev-dependencies]
holochain = { version = "=0.1.3", default-features = false, features = [ "test_utils" ] }
tokio = { version = "1.3", features = ["full"] }
futures = { version = "0.3.1", default-features = false }
serial_test = "*"
