[package]
name = "follows"
version = "0.0.1"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]
name = "follows"

[dependencies]
hdk = { workspace = true }
holochain_integrity_types = { workspace = true }
serde = { workspace = true }
follows_integrity = { workspace = true }
hc_link_pagination = { workspace = true }
follows_types = { workspace = true }
trust_atom_types = {git = "https://github.com/trustgraph/trustgraph-holochain.git", package = "trust_atom_types"}
# trust_atom_types = { path= "/Users/knight/code/trustgraph/trustgraph-holochain/zomes/trust_atom_types"}
