[package]
name = "follows"
version = "0.0.1"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]
name = "follows"

[dependencies]
hdk = { workspace = true }
serde = { workspace = true }
follows_integrity = { workspace = true }
hc_link_pagination = { workspace = true }
hc_call_utils = { workspace = true }
follows_types = { workspace = true }
mews_types = { workspace = true }
trust_atom_types = { workspace = true }
