[package]
name = "follows"
version = "0.0.1"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]
name = "follows"

[dependencies]
hc_call_utils = { workspace = true }
hc_link_pagination = { workspace = true }
hdk = { workspace = true }
follows_integrity = { workspace = true } 
follows_types = { workspace = true }
mews_types ={ workspace = true}
serde = { workspace = true }
trust_atom_types ={ workspace = true}