[package]
name = "mews"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]
name = "mews"

[dependencies]
hdk = { workspace = true }
serde = { workspace = true }
regex = "1"
mews_integrity = { workspace = true } 
prefix_index = { git = "https://github.com/holochain-open-dev/holochain-prefix-index", tag = "0.7.0", module = "lib/prefix_index" }
profiles_integrity = { workspace = true }
mews_types = { workspace = true }
rand = "0.8.5"
hc_call_utils = { workspace = true }
hc_link_pagination = { workspace = true }
follows_types = { workspace = true }
trust_atom_types = { workspace = true }
follows = { workspace = true }
