[package]
name = "mews"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]
name = "mews"

[dependencies]
hdk = { workspace = true }
serde = { workspace = true }
regex = { workspace = true }
mews_integrity = { workspace = true } 
hc_prefix_index = { workspace = true }
profiles_integrity = { workspace = true }
mews_types = { workspace = true }
rand = { workspace = true }
hc_call_utils = { workspace = true }
hc_link_pagination = { workspace = true }
follows_types = { workspace = true }
trust_atom = { workspace = true }