[package]
edition = "2021"
name = "trust_atom"
version = "0.0.1"

[lib]
crate-type = ["cdylib", "rlib"]
name = "trust_atom"

[dependencies]
trust_atom = { git = "https://github.com/trustgraph/trustgraph-holochain.git", package = "trust_atom", branch = "chore/hdk-0.3.2-using-builder" }

hdk = { workspace = true }
serde = { workspace = true }
rust_decimal = "1"

