[package]
name = "mews_integrity"
version = "0.0.1"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]
name = "mews_integrity"

[dependencies]
hdi = { workspace = true }
hdk = { workspace = true }
serde = { workspace = true }
prefix_index = { git = "https://github.com/holochain-open-dev/holochain-prefix-index", tag = "0.7.0", module = "lib/prefix_index" }
mews_types = { workspace = true }