[package]
name = "mews_integrity"
version = "0.0.1"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]
name = "mews_integrity"

[dependencies]
hdi = { workspace = true }
hdk = { workspace = true }
serde = { workspace = true }
hc_prefix_index = { git = "https://github.com/holochain-open-dev/holochain-prefix-index", module = "lib/hc_prefix_index" }
mews_types = { workspace = true }

[dev-dependencies]
holochain = { version = "=0.3.1", default-features = false, features = [
  "test_utils",
] }

rmp-serde = "1"
serde_json = "1.0"
tokio = "1"