[package]
name = "profiles_integrity"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]
name = "profiles_integrity"

[dependencies]
hc_zome_profiles_integrity = { git = "https://github.com/holochain-open-dev/profiles.git", branch = "for-hdk-v0.4.0-dev.8" }
# hc_zome_profiles_integrity = "0.2.0"

hdi = { workspace = true }

serde = { workspace = true }
