[package]
name = "profiles_integrity"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]
name = "profiles_integrity"

[dependencies]
hc_zome_profiles_integrity = { git = "https://github.com/holochain-open-dev/profiles.git", branch = "main-0.4" }

hdi = { workspace = true }

serde = { workspace = true }
