[package]
edition = "2021"
name = "trust_atom_integrity_zome"
version = "0.0.1"

[lib]
crate-type = ["cdylib", "rlib"]
name = "trust_atom_integrity_zome"

[dependencies]
trust_atom_integrity = {git = "https://github.com/trustgraph/trustgraph-holochain.git",  package = "trust_atom_integrity"}
# trust_atom_integrity = { path= "/Users/knight/code/trustgraph/trustgraph-holochain/zomes/trust_atom_integrity"}

hdk = { workspace = true }
serde = { workspace = true }
rust_decimal = "1"
